--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -78,6 +78,17 @@
                       </button>
                     </a>
                 </li>
+
+                <li>
+                  <a (click)="onSubmitHistory()">
+                    <button  mat-button class="menu-button">
+                      <mat-icon>history</mat-icon>
+                      <span>Upload History</span>
+                    </button>
+                  </a>
+                  
+              </li>
+
                 <li>
                     <a (click)="onSubmitTracker()">
                       <button  mat-button class="menu-button">
