--- a/Front-End/Image-Converter/src/app/converter/converter.component.html
+++ b/Front-End/Image-Converter/src/app/converter/converter.component.html
@@ -20,7 +20,7 @@
 <!-- <img id="load" *ngIf="loading" src="assets/loading.gif" width="400"/> -->
 <!-- <mat-spinner *ngIf="loading" id="spin" [diameter]="150" primary style="margin-top:50px;margin:0 auto;"></mat-spinner> -->
 
-
+<div class = uploadBox>
 <mat-card id="uploadcard" *ngIf="!loading" class="card" draggable="true" ngClass="{{ dragAreaClass }}">
 
   <span id="drag">Drag files here
@@ -32,7 +32,7 @@
     <br>
     <hr>
 
-    <div class="fieldsetWrapper">
+    <!-- <div class="fieldsetWrapper">
       <div class="fieldsetContainer">
           <fieldset>
               <legend>Width: px</legend>
@@ -50,7 +50,7 @@
               <legend>Height: px</legend>
           </fieldset>
       </div>
-    </div>
+    </div> -->
 
     <div class="dragged-files-wrapper" >
       <img mat-card-image id="uploadedImg" src={{displayImg}} alt="Graph Image">
@@ -65,21 +65,22 @@
     </button>
   </mat-card-actions>
 </mat-card>
+</div>
 
-<div *ngIf="showDim" class="original-image-dimensions">
-  <h4>Original Image Dimensions</h4>
-  <p>Image height: {{height}}px</p>
-  <p>Image width: {{width}}px</p>
+<div *ngIf="showDim" class="textBox">
+  <h4>Image Dimensions</h4>
+  <p class="box-text">Image height: {{height}}px</p>
+  <p class="box-text">Image width: {{width}}px</p>
 </div>
 
 <!-- Image Filters -->
-<div id="imageFilter">
+<div id="imageFilter" class="uploadBox">
   <app-filter></app-filter>
 </div>
-<div *ngIf="uploadSuccess" class="original-image-dimensions">
+<div *ngIf="uploadSuccess" class="textBox">
   <h4>Resized Image Dimensions</h4>
-  <p>Image height: {{resizedHeight}}px</p>
-  <p>Image width: {{resizedWidth}}px</p>
+  <p class="box-text">Image height: {{resizedHeight}}px</p>
+  <p class="box-text">Image width: {{resizedWidth}}px</p>
 </div>
 
 <!--Image Annotation-->
