--- a/Front-End/Image-Converter/src/app/converter/converter.component.scss
+++ b/Front-End/Image-Converter/src/app/converter/converter.component.scss
@@ -13,6 +13,7 @@
   padding-bottom: 20px;
 }
 #uploadcard {
+  display: inline-block;
     max-width: 400px;
     margin-left: auto;
     margin-right: auto;
@@ -380,4 +381,36 @@ legend {
 
 fieldset:nth-of-type(3) > legend {
   transform: rotate(180deg);
+}
+
+.uploadBox{
+  // display: inline-block;
+  padding: 20px;
+}
+
+.textBox{
+  display: inline-block;
+  padding: 5px;
+  border: 5px solid black;
+  border-radius: 20px;  
+  }
+
+  // h4{
+  //   text-decoration:underline;
+  // }
+  h4 {
+    text-decoration: underline;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1em;
+    font-weight:700;
+    line-height: 1.7em;
+    color: black;
+}
+
+.box-text{
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.1em;
+  font-weight:400;
+  line-height: 1.7em;
+  color: black;
 }
