--- a/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
+++ b/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
@@ -151,7 +151,7 @@
                     </button>
                 
                     <h4>{{nameArr[i]}}</h4>
-                    <p>{{tagArr[i]}}</p>
+                    <p hidden>{{tagArr[i]}}</p>
                     
                   </div>
                 </div>
