🚧 (Back-end) Search images

--- a/Front-End/Image-Converter/src/app/converter/converter.component.html
+++ b/Front-End/Image-Converter/src/app/converter/converter.component.html
@@ -43,7 +43,7 @@
             </mat-card-content>
         </fieldset>
   
-        <fieldset>
+        <!-- <fieldset>
             <legend>Height: {{height}}px</legend>
         </fieldset>
         
@@ -53,7 +53,7 @@
   
         <fieldset>
             <legend>Height: {{height}}px</legend>
-        </fieldset>
+        </fieldset> -->
     </div>
   </div>
   
