✏️  (Front-end) fixing typos in the gallery component

--- a/Front-End/Image-Converter/src/app/gallery/gallery.component.html
+++ b/Front-End/Image-Converter/src/app/gallery/gallery.component.html
@@ -58,7 +58,7 @@
         <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="400">
           <div class="box">
 
-            <img src="assets/img/galleryBarChart.png" (click)='fileSelection("Bar")'  class="img-fluid" alt="">
+            <img src="assets/img/galleryBarChart.png" (click)='fileSelection("bar graph")'  class="img-fluid" alt="">
             <h3 (click)='fileSelection("bar graph")' >Bar Graphs</h3>
             
           </div>
@@ -66,7 +66,7 @@
 
         <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="600">
           <div class="box">
-            <img src="assets/img/galleryPie.png" (click)='fileSelection("Chart")' class="img-fluid" alt="">
+            <img src="assets/img/galleryPie.png" (click)='fileSelection("pie chart")' class="img-fluid" alt="">
             <h3 (click)='fileSelection("pie chart")'>Pie Charts</h3>
             
           </div>
@@ -81,7 +81,7 @@
 
         <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
           <div class="box">
-            <img src="assets/img/flow.png" (click)='fileSelection("Line")' class="img-fluid" alt="">
+            <img src="assets/img/flow.png" (click)='fileSelection("flow chart")' class="img-fluid" alt="">
             <h3 (click)='fileSelection("flow chart")'>Flow Charts</h3>
             
           </div>
@@ -89,7 +89,7 @@
 
         <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="400">
           <div class="box">
-            <img src="assets/img/bloxplots.jpg" (click)='fileSelection("Bar")'  class="img-fluid" alt="">
+            <img src="assets/img/bloxplots.jpg" (click)='fileSelection("table")'  class="img-fluid" alt="">
             <h3 (click)='fileSelection("table")' >Tables</h3>
 
             
