--- a/Front-End/Image-Converter/src/app/converter/converter.component.html
+++ b/Front-End/Image-Converter/src/app/converter/converter.component.html
@@ -104,7 +104,7 @@
     </mat-step>
   </mat-stepper>
 </div>
-
+<div id="progress" *ngIf="loading"></div>
 <!-- Image Filters -->
 <div id="imageFilter" class="uploadBox">
   <app-filter></app-filter>
