--- a/Front-End/Image-Converter/src/app/converter/converter.component.html
+++ b/Front-End/Image-Converter/src/app/converter/converter.component.html
@@ -1,6 +1,8 @@
 <div class="w3-container" id="uploadHistory" style="margin-top:5px">
-  <h1 class="text-heading"><b>Upload Image</b></h1>
-  <!-- <hr style="width:50px;border:5px solid black" class="w3-round"> -->
+  <!-- <h1 class="text-heading"><b>Upload Image</b></h1> -->
+  <div id="heading">
+    <h1 class="text-heading"><b>Upload Image</b></h1>
+  </div>
 </div>
 
 
