--- a/Front-End/Image-Converter/src/app/converter/converter.component.scss
+++ b/Front-End/Image-Converter/src/app/converter/converter.component.scss
@@ -1,8 +1,10 @@
-.text-heading{
-  font-size:  50px;
-  text-decoration: underline;
-  padding-bottom: 20px;
+#heading{
+  font-size:  20px;
+  // text-decoration: underline;
+  padding-bottom: 5px;
+  padding-top: 5px;
 }
+
 #uploadcard {
     max-width: 400px;
     // margin-left: 10px;
