--- a/Front-End/Image-Converter/src/app/gallery/gallery.component.html
+++ b/Front-End/Image-Converter/src/app/gallery/gallery.component.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 <div class="w3-container" id="uploadHistory" style="margin-top:5px">
-   <h1 class="text-heading"><b>gallery</b></h1>
+   <h1 class="text-heading"><b>Gallery</b></h1>
    <!-- <hr style="width:50px;border:5px solid black" class="w3-round"> -->
 
     <!-- <h1>Recent Uploads</h1> -->
