--- a/Front-End/Image-Converter/src/app/sharing-feature/sharing-feature.component.html
+++ b/Front-End/Image-Converter/src/app/sharing-feature/sharing-feature.component.html
@@ -1,1 +1,4 @@
-<p>sharing-feature works!</p>
+<div class="headerDiv">
+    <div id="heading">
+      <h1 class="text-heading"><b>Shared Images</b></h1>
+</div>
