--- a/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
+++ b/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
@@ -49,6 +49,14 @@
 
     <div class="container" data-aos="fade-up">
 
+      <!-- <style>
+        .container{
+            background-image:url("assets/img/wallpaper.jpg");
+            /* background-repeat:no-repeat;
+            background-size: cover; */
+        }
+      </style> -->
+
 
       <div class="row">
 
@@ -67,11 +75,11 @@
                     <h4>{{nameArr[i]}}</h4>
                     <p hidden>{{tagArr[i]}}</p>
 
-                    <div class = "container">
+                    <!-- <div class = "container">
                       <button class = "share-btn">
                         share
                       </button>
-                    </div> 
+                    </div>  -->
                     
                   </div>
                 </div>
