--- a/Front-End/Image-Converter/src/app/image-popup/image-popup.component.scss
+++ b/Front-End/Image-Converter/src/app/image-popup/image-popup.component.scss
@@ -4,5 +4,11 @@
     
 }
 
-// #popUp{
-// }
+.form-control{
+    border-radius: 20px;
+    border-style: black;
+    border: 3px solid black;
+    padding: 10px;
+    padding-left:20px;
+    width:50%;
+  }
