--- a/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
+++ b/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
@@ -5,11 +5,11 @@
 <div class="w3-container" id="uploadHistory" style="margin-top:5px">
 
 
-  
+
 
    <div class="headerDiv">
     <div id="heading">
-      <h1 class="text-heading"><b>{{selectedFolder}}</b></h1>
+      <h1 class="text-heading"><b>{{selectedFolder +'s'}}</b></h1>
     </div>
 
     <div id="searchDiv">
@@ -42,7 +42,7 @@
     <div class="wave"></div>
   </div>
 
- 
+
 
    <main id="main">
    <section id="values" class="values">
@@ -52,30 +52,55 @@
 
       <div class="row">
 
-       
+
 
           <div *ngIf="!loading" class="w3-row w3-container">
-            <div *ngFor="let image of uploadedImgProcessed;index as i;">
+            <div *ngFor="let tag of tags;index as i;">
               <div class="searchImages" *ngIf ="text ==='' || (nameArr[i].toLowerCase().includes(text) && nameArr[i]!=null) || (tagArr[i].toLowerCase().includes(text)  && tagArr[i]!=null)">
                 <div class="w3-col s4  w3-center w3-padding-large" data-aos="fade-up" data-aos-delay="200">
                   <div class="box">
-                    
+
                     <button id="imgButton" (click)="imageClick(i)">
                       <img id="imgLink" src={{uploadedImgProcessed[i]}} alt="response img" width="210" height="200" border="0" class="img-fluid">
                     </button>
-                
+
                     <h4>{{nameArr[i]}}</h4>
-                    <p hidden>{{tagArr[i]}}</p>
-                    
+                    <!-- <p >{{tags[i].name}}</p> -->
+                    <!-- <mat-chip *ngFor="let tag1 of tags4;index as j" (removed)="remove(tag)">
+                      {{tags[j].name}}
+                      <button matChipRemove>
+                        <mat-icon>cancel</mat-icon>
+                      </button>
+                    </mat-chip> -->
+                  
+                    <mat-form-field class="tag-list" appearance="fill">
+                      <mat-label>Extracted Tags</mat-label>
+                      <mat-chip-list #chipList aria-label="Tag selection">
+                        
+                        <mat-chip *ngFor="let tag1 of tags4;index as j" (removed)="remove(tag)">
+                          {{tags[j].name}}
+                          <button matChipRemove>
+                            <mat-icon>cancel</mat-icon>
+                          </button>
+                        </mat-chip>
+                        
+                        <input placeholder="Add a new tag..."
+                               [matChipInputFor]="chipList"
+                               [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+                               [matChipInputAddOnBlur]="addOnBlur"
+                               (matChipInputTokenEnd)="add($event)">
+                      </mat-chip-list>
+                    </mat-form-field>
+
                   </div>
                 </div>
                </div>
             </div>
           </div>
 
-      
+
       </div>
-      
+
 
     </div>
 
@@ -86,5 +111,25 @@
 
 
 </div>
+
+
+<!-- <mat-form-field class="tag-list" appearance="fill">
+  <mat-label>Extracted Tags</mat-label>
+  <mat-chip-list #chipList aria-label="Tag selection">
+    
+    <mat-chip *ngFor="let tag of tags" (removed)="remove(tag)">
+      {{tag.name}}
+      <button matChipRemove>
+        <mat-icon>cancel</mat-icon>
+      </button>
+    </mat-chip>
+    
+    <input placeholder="Add a new tag..."
+           [matChipInputFor]="chipList"
+           [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+           [matChipInputAddOnBlur]="addOnBlur"
+           (matChipInputTokenEnd)="add($event)">
+  </mat-chip-list>
+</mat-form-field> -->
 
 
