Revert "Merge pull request #172 from COS301-SE-2022/feature/re-demoUI"
This reverts commit 4f96ce532890f1e95fbfe2005667ba4251ea664c, reversing
changes made to 8ddc2fbfe5d14b96124ccd921f83bcd524d7ed5a.

--- a/Front-End/Image-Converter/src/app/live-graphing2/live-graphing2.component.html
+++ b/Front-End/Image-Converter/src/app/live-graphing2/live-graphing2.component.html
@@ -1,5 +1,6 @@
-<div id="heading">
-  <h1 class="text-heading"><b>Plot Graph</b></h1>
+<div class="w3-container" id="uploadHistory" style="margin-top:5px">
+    <h1 class="text-heading"><b>Plot Graph</b></h1>
+    <!-- <hr style="width:50px;border:5px solid black" class="w3-round"> -->
 </div>
 
 <div id="calculator" style="width: 800px; height: 400px;"></div>
