--- a/Front-End/Image-Converter/src/app/live-graphing2/live-graphing2.component.scss
+++ b/Front-End/Image-Converter/src/app/live-graphing2/live-graphing2.component.scss
@@ -1,15 +1,8 @@
-#heading{
-  font-size:  20px;
-  // text-decoration: underline;
-  padding-bottom: 10px;
-  padding-top: 10px;
+.text-heading{
+  font-size:  50px;
+  text-decoration: underline;
+  padding-bottom: 20px;
 }
-
-// .text-heading{
-//   font-size:  50px;
-//   text-decoration: underline;
-//   padding-bottom: 20px;
-// }
 
 #screenshot{
   width: 15%;
