--- a/Front-End/Image-Converter/src/app/unrecognized-images/unrecognized-images.component.html
+++ b/Front-End/Image-Converter/src/app/unrecognized-images/unrecognized-images.component.html
@@ -1,9 +1,13 @@
-<!-- <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 <div class="w3-container" id="uploadHistory" style="margin-top:5px">
    <h1 class="text-heading"><b>Unrecognized Images</b></h1>
-  
+   <!-- <hr style="width:50px;border:5px solid black" class="w3-round"> -->
+
+    <!-- <h1>Recent Uploads</h1> -->
+   <!-- <img *ngIf="loading" src="assets/loading.gif" width="400" /> -->
+   <!-- <mat-spinner *ngIf="loading" id="spin" [diameter]="150" primary style="margin-top:50px;margin:0 auto;"></mat-spinner> -->
    <div class="center" *ngIf="loading">
     <div class="wave"></div>
     <div class="wave"></div>
@@ -30,82 +34,6 @@
       </div> 
     </div>
    </div>
-</div> -->
-
-
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-
-<div class="w3-container" id="uploadHistory" style="margin-top:5px">
-
-
-  
-
-   <!-- <div class="headerDiv"> -->
-    <div id="heading">
-      <h1 class="text-heading"><b>Unrecognized Images</b></h1>
-    </div>
-
-
-   <!-- </div> -->
-
-   <div class="center" *ngIf="loading">
-    <div class="wave"></div>
-    <div class="wave"></div>
-    <div class="wave"></div>
-    <div class="wave"></div>
-    <div class="wave"></div>
-    <div class="wave"></div>
-    <div class="wave"></div>
-    <div class="wave"></div>
-    <div class="wave"></div>
-    <div class="wave"></div>
-  </div>
-
- 
-
-   <main id="main">
-   <section id="values" class="values">
-
-    <div class="container" data-aos="fade-up">
-
-
-      <div class="row">
-
-       
-
-          <div *ngIf="!loading" class="w3-row w3-container">
-            <div *ngFor="let image of uploadedImgProcessed;index as i;">
-              
-                <div class="w3-col s4  w3-center w3-padding-large" data-aos="fade-up" data-aos-delay="200">
-                  <div class="box">
-                    
-                    <button id="imgButton">
-                      <img id="imgLink" src={{uploadedImgProcessed[i]}} alt="response img" width="210" height="200" border="0" class="img-fluid">
-                    </button>
-                
-                    <!-- <h4>{{nameArr[i]}}</h4>
-                    <p hidden>{{tagArr[i]}}</p> -->
-                    
-                  </div>
-                </div>
-              
-            </div>
-          </div>
-
-      
-      </div>
-      
-
-    </div>
-
-  </section>
-
-  </main>
-
-
-
 </div>
 
 
