--- a/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
+++ b/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
@@ -9,7 +9,7 @@
 
    <div class="headerDiv">
     <div id="heading">
-      <h1 class="text-heading"><b>{{selectedFolder +'s'}}</b></h1>
+      <h1 class="text-heading"><b>{{selectedFolder}}</b></h1>
     </div>
 
     <div id="searchDiv">
@@ -49,14 +49,6 @@
 
     <div class="container" data-aos="fade-up">
 
-      <!-- <style>
-        .container{
-            background-image:url("assets/img/wallpaper.jpg");
-            /* background-repeat:no-repeat;
-            background-size: cover; */
-        }
-      </style> -->
-
 
       <div class="row">
 
@@ -74,12 +66,6 @@
                 
                     <h4>{{nameArr[i]}}</h4>
                     <p hidden>{{tagArr[i]}}</p>
-
-                    <!-- <div class = "container">
-                      <button class = "share-btn">
-                        share
-                      </button>
-                    </div>  -->
                     
                   </div>
                 </div>
