--- a/Front-End/Image-Converter/src/app/nav/nav.component.scss
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.scss
@@ -138,6 +138,7 @@ a:focus {
     border-radius: 0;
     margin-bottom: 40px;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+    height: 50px;
     
 }
 
