basic styling updates

--- a/Front-End/Image-Converter/src/app/admin-image-pop-up/admin-image-pop-up.component.html
+++ b/Front-End/Image-Converter/src/app/admin-image-pop-up/admin-image-pop-up.component.html
@@ -1,4 +1,10 @@
 <div class="admin-box">
+    <style>
+        .admin-box{
+            background-image:url("assets/img/wallpaper.jpg");
+            background-attachment: fixed;
+        }
+    </style>
     <div>
         <h2>Uploaded Image</h2>
         <button class="w3-button w3-round w3-block w3-black" (click)="downloadFile(imageUrl)">
