--- a/Front-End/Image-Converter/src/app/converter/converter.component.scss
+++ b/Front-End/Image-Converter/src/app/converter/converter.component.scss
@@ -121,6 +121,8 @@ a:focus {
     display: flex;
     width: 100%;
     align-items: stretch;
+    // background-image:url("assets/img/wallpaper.jpg");
+    // background-attachment: fixed;
 }
 
 #sidebar {
