--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -162,6 +162,12 @@
         </div>
 
         <div class="content mat-elevation-z8">
+          <style>
+             .content{
+              background-image:url("assets/img/wallpaper.jpg");
+              background-attachment: fixed;
+             }
+          </style>
           <router-outlet></router-outlet>
         </div>
     </div>
@@ -181,7 +187,7 @@
         });
     </script>
 </body>
-
+  
 </html>
  <app-footer></app-footer>
   
