unrecognized image pop-up

--- a/Front-End/Image-Converter/src/app/conversion/conversion.component.html
+++ b/Front-End/Image-Converter/src/app/conversion/conversion.component.html
@@ -1,5 +1,19 @@
 <!-- Conversion Formats -->
 <div class="w3-container" id="conversionFormats" style="margin-top:75px" *ngIf=dispBool>
+
+   <body>
+
+    <style>
+      body{
+      background-image:url("assets/img/wallpaper.jpg");
+      background-attachment: fixed;
+      /* background-repeat:no-repeat;
+      background-size: cover; */
+      height: 600px;
+      width: 800px;
+      
+    }
+    </style>
     <h1 class="text-heading"><b>Conversion Formats</b></h1>
     <!-- <hr style="width:50px;border:5px solid black" class="w3-round"> -->
 
@@ -41,5 +55,6 @@
         </div>-->
       </div>
       
+   </body>
       
   </div>
