--- a/Front-End/Image-Converter/src/app/converter/converter.component.html
+++ b/Front-End/Image-Converter/src/app/converter/converter.component.html
@@ -55,6 +55,12 @@
     </div> -->
 
     <div class="dragged-files-wrapper" >
+      <style>
+        .wrapper{
+          background-image: url("assets/img/wallpaper.jpg");
+          background-attachment: fixed;
+        }
+      </style>
       <img mat-card-image id="uploadedImg" src={{displayImg}} alt="Graph Image">
     </div>
   </mat-card-content>
@@ -134,5 +140,13 @@
 
 <!-- Conversion Formats -->
 <div id="conversionFormat">
+
+  <style>
+    #conversionFormat{
+      background-image:url("assets/img/wallpaper.jpg");
+      background-attachment: fixed;
+    }
+  </style>
+  
   <app-conversion></app-conversion>
 </div>
