--- a/Front-End/Image-Converter/src/app/tracker/tracker.component.html
+++ b/Front-End/Image-Converter/src/app/tracker/tracker.component.html
@@ -1,6 +1,8 @@
 <div class="w3-container" id="uploadHistory" style="margin-top:5px">
     <div class="w3-container" id="uploadHistory" style="margin-top:5px">
-    <hr style="width:50px;border:5px solid black" class="w3-round">
+        <h1 class="text-heading"><b>Activity tracker</b></h1>
+        
+    <!-- <hr style="width:50px;border:5px solid black" class="w3-round"> -->
     <!-- <img id="load" *ngIf="loading" src="assets/loading.gif" width="400"/> -->
     <!-- <mat-spinner *ngIf="loading" id="spin" [diameter]="250" primary style="margin:0 auto;"></mat-spinner> -->
 
