--- a/Front-End/Image-Converter/src/app/tracker/tracker.component.scss
+++ b/Front-End/Image-Converter/src/app/tracker/tracker.component.scss
@@ -1,6 +1,5 @@
 .text-heading{
-    font-size:  50px;
-    text-decoration: underline;
+    font-size:  25px; 
     padding-bottom: 20px;
   }
 
@@ -69,4 +68,12 @@ bodY {
   100% {
     transform: scale(0);
   }
+}
+
+
+#heading{
+  font-size:  20px;
+  // text-decoration: underline;
+  padding-bottom: 5px;
+  padding-top: 5px;
 }
