--- a/Front-End/Image-Converter/src/app/unrecognized-images/unrecognized-images.component.html
+++ b/Front-End/Image-Converter/src/app/unrecognized-images/unrecognized-images.component.html
@@ -81,7 +81,7 @@
                 <div class="w3-col s4  w3-center w3-padding-large" data-aos="fade-up" data-aos-delay="200">
                   <div class="box">
                     
-                    <button id="imgButton">
+                    <button id="imgButton" (click)="imageClick(i)">
                       <img id="imgLink" src={{uploadedImgProcessed[i]}} alt="response img" width="210" height="200" border="0" class="img-fluid">
                     </button>
                 
