Revert "Merge branch 'feature/re-demoUI' into feature/re-demo"
This reverts commit 42eed75d4c7cf687be51c2e11195ff794e524907, reversing
changes made to e0a5073fc3e0db6cf08ef384a8ad3faa6dfef358.

--- a/Front-End/Image-Converter/src/app/tracker/tracker.component.scss
+++ b/Front-End/Image-Converter/src/app/tracker/tracker.component.scss
@@ -1,5 +1,6 @@
 .text-heading{
-    font-size:  25px; 
+    font-size:  50px;
+    text-decoration: underline;
     padding-bottom: 20px;
   }
 
@@ -68,12 +69,4 @@ bodY {
   100% {
     transform: scale(0);
   }
-}
-
-
-#heading{
-  font-size:  20px;
-  // text-decoration: underline;
-  padding-bottom: 5px;
-  padding-top: 5px;
 }
