--- a/Front-End/Image-Converter/src/app/conversion/conversion.component.html
+++ b/Front-End/Image-Converter/src/app/conversion/conversion.component.html
@@ -1,45 +1,60 @@
 <!-- Conversion Formats -->
 <div class="w3-container" id="conversionFormats" style="margin-top:75px" *ngIf=dispBool>
-    <h1 class="text-heading"><b>Conversion Formats</b></h1>
-    <!-- <hr style="width:50px;border:5px solid black" class="w3-round"> -->
 
-    <div class="w3-row w3-container">
-        <div class="w3-col s4  w3-center w3-padding-large">
-            <div class="w3-card-4" style="">
-                <header class="w3-container w3-blue">
-                  <h1><a (click)="downloadPngFile()">Convert to PNG</a></h1>
-                </header>
-            
-                <div class="w3-container">
-                  <p>Convert processed image to PNG format
-                  </p>
-                </div>
-            </div>
-        </div>
-        <div class="w3-col s4  w3-center w3-padding-large">
-            <div class="w3-card-4" style="">
-                <header class="w3-container w3-blue">
-                  <h1><a (click)="downloadJpgFile()">Convert to JPG</a></h1>
-                </header>
-            
-                <div class="w3-container">
-                  <p>Convert processed image to JPG format</p>
-                  
-                </div>
-            </div>
-        </div>
-        <!--<div class="w3-col s4  w3-center w3-padding-large">
-            <div class="w3-card-4" style="">
-                <header class="w3-container w3-blue">
-                  <h1>Convert to SVG</h1>
-                </header>
-            
-                <div class="w3-container">
-                  <p>Convert image to SVG format</p>
-                </div>
-            </div>
-        </div>-->
-      </div>
-      
-      
-  </div>
+  <body>
+
+   <style>
+     body{
+     background-image:url("assets/img/wallpaper.jpg");
+     background-attachment: fixed;
+     /* background-repeat:no-repeat;
+     background-size: cover; */
+     height: 500px;
+     width: 800px;
+     
+ }
+   </style>
+   <h1 class="text-heading"><b>Conversion Formats</b></h1>
+   <!-- <hr style="width:50px;border:5px solid black" class="w3-round"> -->
+
+   <div class="w3-row w3-container">
+       <div class="w3-col s4  w3-center w3-padding-large">
+           <div class="w3-card-4" style="">
+               <header class="w3-container w3-blue">
+                 <h1><a (click)="downloadPngFile()">Convert to PNG</a></h1>
+               </header>
+           
+               <div class="w3-container">
+                 <p>Convert processed image to PNG format
+                 </p>
+               </div>
+           </div>
+       </div>
+       <div class="w3-col s4  w3-center w3-padding-large">
+           <div class="w3-card-4" style="">
+               <header class="w3-container w3-blue">
+                 <h1><a (click)="downloadJpgFile()">Convert to JPG</a></h1>
+               </header>
+           
+               <div class="w3-container">
+                 <p>Convert processed image to JPG format</p>
+                 
+               </div>
+           </div>
+       </div>
+       <!--<div class="w3-col s4  w3-center w3-padding-large">
+           <div class="w3-card-4" style="">
+               <header class="w3-container w3-blue">
+                 <h1>Convert to SVG</h1>
+               </header>
+           
+               <div class="w3-container">
+                 <p>Convert image to SVG format</p>
+               </div>
+           </div>
+       </div>-->
+     </div>
+     
+  </body>
+     
+ </div>
