--- a/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
+++ b/Front-End/Image-Converter/src/app/gallery-images/gallery-images.component.html
@@ -16,7 +16,7 @@
       <app-search (searchText)="textEntered($event)"></app-search>
     </div>
 
-    <div class="dropdown">
+    <!-- <div class="dropdown">
       <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Sort by:
       </button>
@@ -25,7 +25,7 @@
         <a class="dropdown-item" href="#">Name descending</a>
         <a class="dropdown-item" href="#">Date uploaded</a>
       </div>
-    </div>
+    </div> -->
 
    </div>
 
