--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -27,14 +27,26 @@
     body{
         background-image:url("assets/img/wallpaper.jpg");
         background-attachment: fixed;
-        /* background-repeat:no-repeat;
-        background-size: cover; */
+        
+        
     }
     
   </style>
 
 
     <div class="wrapper">
+
+      <div>
+        <style>
+
+          .wrapper{
+            background-image:url("assets/img/wallpaper.jpg");
+            background-attachment: fixed;
+          }
+
+        </style>
+      </div>
+
         <!-- Sidebar  -->
         <nav id="sidebar">
             <div class="sidebar-header">
