--- a/Front-End/Image-Converter/src/app/conversion/conversion.component.html
+++ b/Front-End/Image-Converter/src/app/conversion/conversion.component.html
@@ -9,7 +9,7 @@
                 <header class="w3-container w3-blue">
                   <h1><a (click)="downloadPngFile()">Convert to PNG</a></h1>
                 </header>
-            
+
                 <div class="w3-container">
                   <p>Convert processed image to PNG format
                   </p>
@@ -21,25 +21,36 @@
                 <header class="w3-container w3-blue">
                   <h1><a (click)="downloadJpgFile()">Convert to JPG</a></h1>
                 </header>
-            
+
                 <div class="w3-container">
                   <p>Convert processed image to JPG format</p>
-                  
+
                 </div>
             </div>
         </div>
-        <!--<div class="w3-col s4  w3-center w3-padding-large">
+        <div class="w3-col s4  w3-center w3-padding-large">
             <div class="w3-card-4" style="">
                 <header class="w3-container w3-blue">
-                  <h1>Convert to SVG</h1>
+                  <h1><a (click)="downloadTIFFFile()">Convert to TIFF</a></h1>
                 </header>
-            
+
                 <div class="w3-container">
-                  <p>Convert image to SVG format</p>
+                  <p>Convert processed image to TIFF format</p>
                 </div>
             </div>
-        </div>-->
+        </div>
+        <div class="w3-col s4  w3-center w3-padding-large">
+          <div class="w3-card-4" style="">
+              <header class="w3-container w3-blue">
+                <h1><a (click)="downloadBMPFile()">Convert to BMP</a></h1>
+              </header>
+
+              <div class="w3-container">
+                <p>Convert processed image to BMP format</p>
+              </div>
+          </div>
       </div>
-      
-      
+      </div>
+
+
   </div>
