--- a/Front-End/Image-Converter/src/app/admin-image-pop-up/admin-image-pop-up.component.html
+++ b/Front-End/Image-Converter/src/app/admin-image-pop-up/admin-image-pop-up.component.html
@@ -6,7 +6,7 @@
         </button>
         <br />
         <br/>
-        <h2>Processed Image</h2>
+        <h1 class="text-heading"><b>Processed Image</b></h1>
         <button class="w3-button w3-round w3-block w3-black" (click)="downloadFile(imageProcessedUrl)">
             <img [src]="imageProcessedUrl" id="popupImg" alt="img" />
         </button>
