--- a/Front-End/Image-Converter/src/app/admin-image-pop-up/admin-image-pop-up.component.scss
+++ b/Front-End/Image-Converter/src/app/admin-image-pop-up/admin-image-pop-up.component.scss
@@ -65,4 +65,10 @@ select {
     color: white;
  }
  
+
+ .text-heading{
+	font-size:  25px;
+	text-decoration: underline;
+	padding-bottom: 20px;
+  }
  
