--- a/Front-End/Image-Converter/src/app/gallery/gallery.component.scss
+++ b/Front-End/Image-Converter/src/app/gallery/gallery.component.scss
@@ -1,3 +1,10 @@
+.text-heading{
+  font-size:  25px;
+  text-decoration: underline;
+  padding-bottom: 20px;
+}
+
+
 .values .box {
     padding: 30px;
     box-shadow: 0px 0 5px rgba(1, 41, 112, 0.6);
