--- a/Front-End/Image-Converter/src/app/nav/nav.component.scss
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.scss
@@ -283,8 +283,8 @@ a.article:hover {
 ----------------------------------------------------- */
 
 #content {
-    width: 100%;
-    padding: 20px;
+    // width: 100%;
+    padding: 10px;
     min-height: 100vh;
     transition: all 0.3s;
 }
