--- a/Front-End/Image-Converter/src/app/upload-history/upload-history.component.scss
+++ b/Front-End/Image-Converter/src/app/upload-history/upload-history.component.scss
@@ -83,6 +83,12 @@
 
 
 //gallery style
+.text-heading{
+  font-size:  25px;
+  text-decoration: underline;
+  padding-bottom: 20px;
+}
+
 .values .box {
   padding: 10px;
   box-shadow: 0px 0 5px rgba(1, 41, 112, 0.6);
