--- a/Front-End/Image-Converter/src/app/shared-images/shared-images.component.html
+++ b/Front-End/Image-Converter/src/app/shared-images/shared-images.component.html
@@ -1,1 +1,39 @@
-<p>shared-images works!</p>
+<div class="w3-container" id="uploadHistory" style="margin-top:5px">
+    <h1 class="text-heading"><b>Upload History</b></h1>
+    
+    <div class="center" *ngIf="loading">
+     <div class="wave"></div>
+     <div class="wave"></div>
+     <div class="wave"></div>
+     <div class="wave"></div>
+     <div class="wave"></div>
+     <div class="wave"></div>
+     <div class="wave"></div>
+     <div class="wave"></div>
+     <div class="wave"></div>
+     <div class="wave"></div>
+ 
+   </div>
+   <main id="main">
+   <section id="values" class="values">
+    <div class="container" data-aos="fade-up"><div class="row">
+          <div *ngIf="!loading" class="w3-row w3-container">
+            <div *ngFor="let image of images;index as i;">
+              <!-- <div class="searchImages" *ngIf ="text ==='' || nameArr[i].toLowerCase().includes(text) || tagArr[i].toLowerCase().includes(text)"> -->
+                <div>
+                <div class="w3-col s4  w3-center w3-padding-large" data-aos="fade-up" data-aos-delay="200">
+                  <div class="box">
+                    
+                    <button id="imgButton" (click)="imageClick(i)">
+                      <img id="imgLink" src={{images[i]}} alt="response img" width="210" height="200" border="0" class="img-fluid">
+                    </button>
+                  </div>
+                </div>
+               </div>
+            </div>
+          </div>
+      </div>
+    </div>
+  </section>
+  </main>
+</div>
