--- a/Front-End/Image-Converter/src/app/conversion/conversion.component.html
+++ b/Front-End/Image-Converter/src/app/conversion/conversion.component.html
@@ -49,7 +49,19 @@
                 <p>Convert processed image to BMP format</p>
               </div>
           </div>
-      </div>
+        </div>
+
+        <div class="w3-col s4  w3-center w3-padding-large">
+          <div class="w3-card-4" style="">
+              <header class="w3-container w3-blue">
+                <h1><a (click)="downloadSVGFile()">Convert to SVG</a></h1>
+              </header>
+
+              <div class="w3-container">
+                <p>Convert processed image to SVG format</p>
+              </div>
+          </div>
+        </div>
       </div>
 
 
