Revert "pull request"
This reverts commit 9d4bd4a6aeb43053ae06b9338349dbf222e5a99f.

--- a/Front-End/Image-Converter/src/app/image-popup/image-popup.component.html
+++ b/Front-End/Image-Converter/src/app/image-popup/image-popup.component.html
@@ -7,9 +7,7 @@
         </button>
     </div>
     <div>
-      <br/>
-       <button class="iconB"  (click)="deleteImages()" matTooltip="Delete image"><mat-icon>delete</mat-icon></button>
-       <button class="iconB" (click)="shareImage()" matTooltip="Share image"><mat-icon>share</mat-icon></button>
+       <button class="w3-button w3-round w3-block w3-red" (click)="deleteImages()">Delete Images</button>
     </div>
     <br>
 
