--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -98,7 +98,7 @@
                     </a>
                 </li>
                 <li>
-                  <a (click)="onSubmitLogin()">
+                  <a (click)="onSubmitLogout()">
                     <button  mat-button class="menu-button">
                       <mat-icon>logout</mat-icon>
                       <span>Log out</span>
